[package]
name = "pyo3-linalg-example"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

[lib]
name = "rust_ext"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.13.1"
numpy = "0.9.0"

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]

[dependencies.ndarray-linalg]
version = "0.12.0"
features = ["static"]
